Basic changes in UI, added empty projects to be extended

--- a/FamilyTreeNet/Pages/Index.cshtml
+++ b/FamilyTreeNet/Pages/Index.cshtml
@@ -4,7 +4,13 @@
     ViewData["Title"] = "Home page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+    <div class="text-center">
+        <h1 class="display-4">Family Tree</h1>
+        <p>
+            This application shows a family tree, based on an imported <a href="https://en.wikipedia.org/wiki/GEDCOM" target="_blank">GEDCOM</a> file.
+        </p>
+        <ul>
+            <li><a href="/familynames">Main index of family names</a>.</li>
+            <li><a href="/reports/summary">Summary statistics</a>.</li>
+        </ul>
+    </div>
