I can read through the hardcoded file (but "store" isn't implemented yet)

--- a/FamilyTreeNet/Pages/Admin/Index.cshtml
+++ b/FamilyTreeNet/Pages/Admin/Index.cshtml
@@ -10,5 +10,5 @@
 <ul class="menu">
     <li><a href="/admin/search">Search for people to edit</a></li>
     <li><a href="/admin/person/restore">Restore soft-deleted people</a></li>
-    <li><a href="/admin/init">Initialize the database</a></li>
+    <li><a asp-page="init/index">Initialize the database</a></li>
 </ul>
