First part of personal details are visible

--- a/FamilyTreeNet/Pages/Index.cshtml
+++ b/FamilyTreeNet/Pages/Index.cshtml
@@ -10,7 +10,7 @@
             This application shows a family tree, based on an imported <a href="https://en.wikipedia.org/wiki/GEDCOM" target="_blank">GEDCOM</a> file.
         </p>
         <ul>
-            <li><a href="/familynames">Main index of family names</a>.</li>
-            <li><a href="/reports/summary">Summary statistics</a>.</li>
+            <li><a asp-page="Reports/FamilyNames">Main index of family names</a>.</li>
+            <li><a asp-page="Reports/Summary" >Summary statistics</a>.</li>
         </ul>
     </div>
