--- a/FamilyTreeNet/Pages/Shared/_Layout.cshtml
+++ b/FamilyTreeNet/Pages/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2019 Hans Kesting - Family Tree (.Net version)
+            &copy; 2019 Hans Kesting - Family Tree (.Net/C# version)
         </div>
     </footer>
 
