--- a/FamilyTreeNet/Pages/Admin/Init/Index.cshtml
+++ b/FamilyTreeNet/Pages/Admin/Init/Index.cshtml
@@ -11,7 +11,7 @@
 
 <ul class="menu">
     <li><a asp-page="clear">Remove all data</a></li>
-    <li><a asp-page="load">(Re)load add data from the configured file</a></li>
+    <li><a asp-page="load">(Re)load all data from the configured file</a></li>
     <li><a href="/admin">Back to main menu</a></li>
 </ul>
 <p>
