use specific roles

--- a/FamilyTreeNet/Pages/Shared/_AdminLayout.cshtml
+++ b/FamilyTreeNet/Pages/Shared/_AdminLayout.cshtml
@@ -38,7 +38,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2019 Hans Kesting - Family Tree (.Net version)
+            &copy; 2019-2020 Hans Kesting - Family Tree (.Net version)
         </div>
     </footer>
 
