--- a/FamilyTreeNet/Pages/Shared/_AdminLayout.cshtml
+++ b/FamilyTreeNet/Pages/Shared/_AdminLayout.cshtml
@@ -21,7 +21,7 @@
 <body>
     <header>
         <div class="jumbotron">
-            <h1 style="font-size: 48pt;"><a href="/admin">Family Tree - Admin</a></h1>
+            <h1 style="font-size: 48pt;"><a href="/Admin">Family Tree - Admin</a></h1>
         </div>
         <div class="float-right">
             <!-- TODO only show when logged in (TODO log in!) -->
