--- a/FamilyTreeNet/Pages/Admin/DeletePerson.cshtml
+++ b/FamilyTreeNet/Pages/Admin/DeletePerson.cshtml
@@ -9,5 +9,5 @@
 <form method="post">
     <input type="hidden" name="confirmid" value="@Model.Id" />
     <button type="submit" class="btn btn-primary">Yes</button>
-    <button type="button" class="btn btn-secondary" onclick="history.back(-1)">No</button>
+    <a asp-page="Back" class="btn btn-secondary">Cancel</a>
 </form>
