--- a/FamilyTreeNet/Pages/Admin/EditPerson.cshtml
+++ b/FamilyTreeNet/Pages/Admin/EditPerson.cshtml
@@ -59,6 +59,7 @@
     </div>
 
     <button type="submit" class="btn btn-primary">Submit</button>
-    <button type="button" class="btn btn-secondary" onclick="history.back(-1)">Cancel</button>
+    <a asp-page="Back" class="btn btn-secondary">Cancel</a>
+
 </form>
 
